--- a/Class Exercise 02/index.html
+++ b/Class Exercise 02/index.html
@@ -2,8 +2,22 @@
 <html lang="en">
     <head>
         <title>Js Class Exercise</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <main>
+            <aside>
+                <button>Close</button>
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Work</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </aside>
+        </main>
     </body>
 </html>
