Created a section with a Form

--- a/Class Exercise 02/index.html
+++ b/Class Exercise 02/index.html
@@ -18,6 +18,22 @@
                     </ul>
                 </nav>
             </aside>
+
+            <section>
+                <button>Show</button>
+                <form action="" method="post">
+                    <label for="book-title">Book Title</label>
+                    <input type="book-title" name="book-title" id="book-title">
+
+                    <label for="book-author">Book Author</label>
+                    <input type="book-author" name="book-author" id="book-author">
+
+                    <select id="question" name="question">
+                        <option selected value="Yes">Yes</option>
+                        <option value="No">No</option>
+                    </select>
+                </form>
+            </section>
         </main>
     </body>
 </html>
