Changed the Classes to Id's
Added External Js File

Added onClick Functions that open and close the Aside Element

--- a/Class Exercise 02/index.html
+++ b/Class Exercise 02/index.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <main>
-            <aside class="side-bar">
-                <button>Close</button>
+            <aside id="side-bar">
+                <button onclick="closeSideBar()">Close</button>
                 <nav>
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -19,8 +19,8 @@
                 </nav>
             </aside>
 
-            <section class="main-section">
-                <button>Show</button>
+            <section id="main-section">
+                <button onclick="showSideBar()">Show</button>
 
                 <h2>My Reading List</h2>
 
@@ -41,5 +41,6 @@
                 </form>  
             </section>
         </main>
+        <script src="./script.js"></script>
     </body>
 </html>
