Added Label to Select Element and Also class to Add Book Button

--- a/Class Exercise 02/index.html
+++ b/Class Exercise 02/index.html
@@ -31,12 +31,13 @@
                     <label for="book-author">Book Author</label>
                     <input type="book-author" name="book-author" id="book-author">
 
+                    <label for="question">Have You Read It?</label>
                     <select id="question" name="question">
                         <option selected value="Yes">Yes</option>
                         <option value="No">No</option>
                     </select>
 
-                    <button>Add Book</button>                
+                    <button class="add-btn" >Add Book</button>                
                 
                 </form>  
             </section>
