Added second click on the button, now we can close and open the side bar with the same button

--- a/Class Exercise 02/index.html
+++ b/Class Exercise 02/index.html
@@ -7,7 +7,7 @@
     <body>
         <main>
             <aside id="side-bar">
-                <button onclick="closeSideBar()">Close</button>
+                <!-- <button onclick="closeSideBar()">Close</button> -->
                 <nav>
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -20,7 +20,7 @@
             </aside>
 
             <section id="main-section">
-                <button onclick="showSideBar()">Show</button>
+                <button id="show-hide-btn" onclick="showSideBar()">Show</button>
 
                 <h2>My Reading List</h2>
 
