Added Styling to the table in Css and remved the inline outdated Html Border

--- a/Class Exercise 02/index.html
+++ b/Class Exercise 02/index.html
@@ -41,7 +41,7 @@
 
                 <button onclick="addBook()" class="add-btn">Add Book</button>
                 
-                <table border="1" cellpadding="5" cellspacing="5">
+                <table>
                     <thead>
                         <tr>
                             <th>Book Title</th>
