Added id's to the html elements

--- a/Class Exercise 03/index.html
+++ b/Class Exercise 03/index.html
@@ -16,7 +16,8 @@
                 <option value="navy">Dark Navy</option>
             </select>
 
-            <input type="submit" value="Change Bg">
+            <input id="change-bg" onclick="changeBg()" type="submit" value="Change Bg">
         </section>
+        <script src="./script.js"></script>
     </body>
 </html>
