Added simple styling to the Html Document

--- a/Class Exercise 03/index.html
+++ b/Class Exercise 03/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Exercise 03</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <section>
@@ -16,7 +17,7 @@
                 <option value="navy">Dark Navy</option>
             </select>
 
-            <input id="change-bg" onclick="changeBg()" type="submit" value="Change Bg">
+            <input id="change-bg" onclick="changeBg()" type="submit" value="Change Background">
         </section>
         <script src="./script.js"></script>
     </body>
