Created a new folder for the New Layout Exercise - Created a new html document and style document - Created the first services section in Html

--- a/Class Exercise 03/index.html
+++ b/Class Exercise 03/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Exercise 03</title>
+        <title>Change Bg Exercise</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
