Finished the Html Structure

--- a/Class Exercise 04/index.html
+++ b/Class Exercise 04/index.html
@@ -6,12 +6,31 @@
     <body>
         <main>
             <section class="services">
-                <div>
-                    <span>Our Services</span>
-                    <h3>Psychotherapy can help treat challenges and symptoms relating to mental health.</h3>
+                <div class="services-section">
+                    <div>
+                        <span>Our Services</span>
+                        <h3>Psychotherapy can help treat challenges and symptoms relating to mental health.</h3>
+                    </div>
+                    <div>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque obcaecati, quod quibusdam perspiciatis itaque natus nisi ex rem cumque ad mollitia deserunt nulla, facilis ab consequuntur fugit dolores error consequatur illo magnam eum. Pariatur nesciunt ea, repellendus excepturi illo, recusandae optio, sed quibusdam vero hic est et quas provident vel.
+                    </div>
                 </div>
-                <div>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque obcaecati, quod quibusdam perspiciatis itaque natus nisi ex rem cumque ad mollitia deserunt nulla, facilis ab consequuntur fugit dolores error consequatur illo magnam eum. Pariatur nesciunt ea, repellendus excepturi illo, recusandae optio, sed quibusdam vero hic est et quas provident vel.
+                <div class="cards-section">
+                    <div class="card">
+                        <img src="https://images.unsplash.com/photo-1640622299541-8c8ab8a098f3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1472&q=80" alt="">
+                        <h4 class="card-title">Service 01</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptas tempore asperiores dolores expedita neque placeat, quidem facilis dolorem. Earum?</p>
+                    </div>
+                    <div class="card">
+                        <img src="https://images.unsplash.com/photo-1640622299541-8c8ab8a098f3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1472&q=80" alt="">
+                        <h4 class="card-title">Service 01</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptas tempore asperiores dolores expedita neque placeat, quidem facilis dolorem. Earum?</p>
+                    </div>
+                    <div class="card">
+                        <img src="https://images.unsplash.com/photo-1640622299541-8c8ab8a098f3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1472&q=80" alt="">
+                        <h4 class="card-title">Service 01</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptas tempore asperiores dolores expedita neque placeat, quidem facilis dolorem. Earum?</p>
+                    </div>
                 </div>
             </section>
         </main>
