Styled the services top section

--- a/Class Exercise 04/index.html
+++ b/Class Exercise 04/index.html
@@ -10,13 +10,19 @@
                 <div class="container">
                     <div class="services-section">
                         <div>
-                            <span>Our Services</span>
+                            <span >Our Services</span>
                             <h3 class="services-heading">Psychotherapy can help treat challenges and symptoms relating to mental health.</h3>
                             <div class="underline"></div>
-                            <button>Contact Us</button>
+                            <button class="main-btn">Contact Us</button>
                         </div>
                         <div>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque obcaecati, quod quibusdam perspiciatis itaque natus nisi ex rem cumque ad mollitia deserunt nulla, facilis ab consequuntur fugit dolores error consequatur illo magnam eum. Pariatur nesciunt ea, repellendus excepturi illo, recusandae optio, sed quibusdam vero hic est et quas provident vel.
+                            <p class="services-copy">
+                               Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ab dolores veritatis soluta expedita itaque nihil, ipsam dolorum quasi vitae repellat eos porro, unde deserunt maxime. Impedit ab asperiores alias sapiente consectetur quisquam sed. 
+                               
+                               <br>
+                               
+                               Odit saepe cum recusandae unde quis dignissimos, corporis voluptatem ut sequi cumque, voluptas minima quisquam nisi minus qui ipsa eos adipisci aliquam ducimus vero veniam? Odio non suscipit eum repellat maxime pariatur dolorem ipsa enim molestias. 
+                            </p>
                         </div>
                     </div>
                     <div class="cards-section">
