--- a/Class Exercise 04/index.html
+++ b/Class Exercise 04/index.html
@@ -27,17 +27,17 @@
                     </div>
                     <div class="cards-section">
                         <div class="card">
-                            <img src="https://images.unsplash.com/photo-1640622299541-8c8ab8a098f3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1472&q=80" alt="">
+                            <img src="https://images.unsplash.com/photo-1608403890696-0f18a2960153?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDR8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="">
                             <h4 class="card-title">Service 01</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptas tempore asperiores dolores expedita neque placeat, quidem facilis dolorem. Earum?</p>
                         </div>
                         <div class="card">
-                            <img src="https://images.unsplash.com/photo-1640622299541-8c8ab8a098f3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1472&q=80" alt="">
+                            <img src="https://images.unsplash.com/photo-1624749076747-79f933b8b671?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDF8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="">
                             <h4 class="card-title">Service 01</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptas tempore asperiores dolores expedita neque placeat, quidem facilis dolorem. Earum?</p>
                         </div>
                         <div class="card">
-                            <img src="https://images.unsplash.com/photo-1640622299541-8c8ab8a098f3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1472&q=80" alt="">
+                            <img src="https://images.unsplash.com/photo-1624749076719-52c184a2e2e3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="">
                             <h4 class="card-title">Service 01</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptas tempore asperiores dolores expedita neque placeat, quidem facilis dolorem. Earum?</p>
                         </div>
