Created the pop-up modal and added some styling

--- a/Class Exercise 04/index.html
+++ b/Class Exercise 04/index.html
@@ -6,6 +6,30 @@
     </head>
     <body>
         <main>
+            <div id="pop-up-modal">
+                <form action="">
+                    <button id="close-btn">X</button>
+
+                    <h4>Contact Us</h4>
+
+                    <div>
+                        <label for="name">Name</label>
+                        <input id="name" type="name" placeholder="Your Name Here" required>
+                    </div>
+
+                    <div>
+                        <label for="email">Email</label>
+                        <input id="email" type="email" placeholder="Your Email Here" required>
+                    </div>
+
+                    <div>
+                        <label for="message">Message</label>
+                        <textarea placeholder="Your Message" name="message" id="message" ></textarea>
+                    </div>
+
+                    <input id="send-btn" type="submit" value="Send">
+                </form>
+            </div>
             <section class="services">
                 <div class="container">
                     <div class="services-section">
