Added some animations on the popup modal

--- a/Class Exercise 04/index.html
+++ b/Class Exercise 04/index.html
@@ -46,7 +46,7 @@
                 <div class="background"></div>
             </section>
             <div id="pop-up-modal">
-                <form action="">
+                <form action="" method="post" id="pop-up-form">
                     <button onclick="closeModal()" id="close-btn">X</button>
 
                     <h4>Contact Us</h4>
