Added google font Poppins to my style files and also added id's to my exercise 05 html

--- a/Class Exercise 05/index.html
+++ b/Class Exercise 05/index.html
@@ -7,17 +7,17 @@
         <title>Document</title>
     </head>
     <body>
-        <section>
+        <section class="main-section">
            <header> 
                <h1>Goals without a plan are just Dreams!</h1>
             </header>
-            <div>
+            <div id="my-input">
                 <label for="">What are your plans for today?</label>
                 <input type="text" placeholder="">
-                <button>Add To Do</button>
+                <button id="add-btn">Add To Do</button>
             </div>
-            <div>
-                <button>X</button>
+            <div id="my-todo">
+                <button id="complete-btn">X</button>
                 <span>Goal 01</span>
             </div>
         </section>
