--- a/Class Exercise 05/index.html
+++ b/Class Exercise 05/index.html
@@ -4,17 +4,20 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <link rel="stylesheet" href="style.css">
+        <title>To Do App</title>
     </head>
     <body>
         <section class="main-section">
            <header> 
-               <h1>Goals without a plan are just Dreams!</h1>
+               <h1 class="main-title">Goals without a plan are just Dreams!</h1>
             </header>
-            <div id="my-input">
+            <div class="my-input">
                 <label for="">What are your plans for today?</label>
-                <input type="text" placeholder="">
-                <button id="add-btn">Add To Do</button>
+                <div class="input-btn-wraper">
+                    <input type="text" placeholder="Write your plans here...">
+                    <button id="add-btn">Add To Do</button>
+                </div>
             </div>
             <div id="my-todo">
                 <button id="complete-btn">X</button>
