Added more styling to the html

--- a/Class Exercise 05/index.html
+++ b/Class Exercise 05/index.html
@@ -12,14 +12,14 @@
            <header> 
                <h1 class="main-title">Goals without a plan are just Dreams!</h1>
             </header>
-            <div class="my-input">
+            <div class="input-wraper">
                 <label for="">What are your plans for today?</label>
                 <div class="input-btn-wraper">
-                    <input type="text" placeholder="Write your plans here...">
+                    <input id="goals-input" type="text" placeholder="Write your plans here...">
                     <button id="add-btn">Add To Do</button>
                 </div>
             </div>
-            <div id="my-todo">
+            <div id="todo-wraper">
                 <button id="complete-btn">X</button>
                 <span>Goal 01</span>
             </div>
