Added some styling

--- a/Class Exercise 05/index.html
+++ b/Class Exercise 05/index.html
@@ -15,7 +15,7 @@
             <div id="input-wraper">
                 <label for="">What are your plans for today?</label>
                 <div class="input-btn-wraper">
-                    <input maxlength="50" id="goals-input" type="text" placeholder="Write your plans here...">
+                    <input maxlength="50" id="goals-input" type="text">
                     <button onclick="addToDo()" id="add-btn">Add To Do</button>
                 </div>
             </div>
