Added some content to the Html file

--- a/Exam/index.html
+++ b/Exam/index.html
@@ -7,6 +7,17 @@
         <title>Exam Kristijan Pirkovic</title>
     </head>
     <body>
-        
+        <section class="hero-section">
+            <div class="right-container">
+                <img src="https://images.unsplash.com/photo-1631469931859-f6262c057b10?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="Person riding a Bike">
+            </div>
+            <div class="left-container">
+                <header>
+                    <h1>It never gets easier, you just go faster</h1>
+                </header>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis mollitia necessitatibus quam tempore, voluptate et?</p>
+                <button>Learn More</button>
+            </div>
+        </section>
     </body>
 </html>
