Added the responsivness

--- a/Exam/index.html
+++ b/Exam/index.html
@@ -15,8 +15,7 @@
             <div class="right-container">
                 <header>
                     <h1>
-                        It never gets easier
-                        <br> you just go faster!
+                        It never gets easier you just go faster!
                     </h1>
                 </header>
 
