--- a/Javascript/Exercises/Exercise 01/index.html
+++ b/Javascript/Exercises/Exercise 01/index.html
@@ -4,6 +4,26 @@
         <title>JS Exercise 01</title>
     </head>
     <body>
+        <section>
+            <h2>Feet to meeters calculator</h2>
+            <p>Write feet and the program will convert it to meeters:</p>
+            <label for="feet">Feet</label>
+            <input type="number" name="feet" id="feet">
+            <button onclick="meetersConverter()">Convert</button>
+            <br>
+            <p id="results-meters">Meeters = </p>
+
+        </section>
+        <section>
+            <h2>Calculate the area and the perimetar of a rectangle</h2>
+            <label for="width">Width</label>
+            <input required="" type="number" id="width" name="width" placeholder="cm">
+            <label for="heigh">Height</label>
+            <input type="number" id="height" name="height" placeholder="cm">
+            <button onclick="calculateArea()">Calculate</button>
+            <br>
+            <p id="area">Area =  </p>
+        </section>
         <script src="./script.js"></script>
     </body>
 </html>
