Created a program that calculates the area of a circle

--- a/Javascript/Exercises/Exercise 01/index.html
+++ b/Javascript/Exercises/Exercise 01/index.html
@@ -24,6 +24,15 @@
             <br>
             <p id="area">Area =  </p>
         </section>
+        <section>
+            <h2>Calculate the area of a circle</h2>
+            <p>Write radius of your circle:</p>
+            <label for="circle-radius">Radius</label>
+            <input required="" type="number" id="circle-radius" name="circle-radius">
+            <button onclick="calculateCircleArea()">Calculate</button>
+            <br>
+            <p id="circle-area">Circle Area =  </p>
+        </section>
         <script src="./script.js"></script>
     </body>
 </html>
