--- a/Javascript/Exercises/Exercise 03/index.html
+++ b/Javascript/Exercises/Exercise 03/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <script src="./script.js"></script>
+        <script src="./largestVal.js"></script>
     </body>
 </html>
