Finished Bonus Homework

--- a/Javascript/Homework/Homework 02/index.html
+++ b/Javascript/Homework/Homework 02/index.html
@@ -17,5 +17,6 @@
             <span id="show-results"></span>
         </section>
         <script src="./script.js"></script>
+        <script src="./additional exercise.js"></script>
     </body>
 </html>
