Fixed class list add when adding class that has empty spaces

--- a/Javascript/Homework/Homework 05/Recipe App/index.html
+++ b/Javascript/Homework/Homework 05/Recipe App/index.html
@@ -24,7 +24,7 @@
             <option value="gr">gr</option>
             <option value="kg">kg</option>
         </select>
-        <button class="animate__animated" id="add-ingredient">Print Recipe</button>
+        <button class="animate__animated" id="add-ingredient">Print</button>
         <span id="error"></span>
     </section>
     <section id="recipe-result">
